Fixed overflow issue

--- a/src/css/oliver.scss
+++ b/src/css/oliver.scss
@@ -13,6 +13,7 @@ div#content{
     box-shadow: 0 3px 6px rgba(0,0,0,0.16);
     background-color: #eee;
     text-align: center;
+    overflow-y: hidden;
 
     & > *{
       margin: 8px;
